src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>SI_Actividad_Cuenta__c</fullName>
        <formula>Contact.SI_Actividad_Cuenta__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actividad_Cuenta</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SI_CodigoPostalContacto__c</fullName>
        <formula>Contact.KS_Codigo_postal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CodigoPostalContacto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SI_ProvinciaContacto__c</fullName>
        <formula>Contact.KS_Provincia__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProvinciaContacto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Activity_Date__c</fullName>
        <inlineHelpText>Date of the last Campaign Monitor activity.</inlineHelpText>
        <label>Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>wbsendit__Activity__c</fullName>
        <description>Last Campaign Monitor activity type.</description>
        <inlineHelpText>Last Campaign Monitor activity type.</inlineHelpText>
        <label>Activity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bounced</fullName>
                </value>
                <value>
                    <fullName>Clicked</fullName>
                </value>
                <value>
                    <fullName>Opened</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Unsubscribed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wbsendit__Clicks__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Shows number of times the subscriber clicked links from this email campaign.</inlineHelpText>
        <label>Clicks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Opens__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Shows number of times the subscriber opened this email campaign.</inlineHelpText>
        <label>Opens</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <sharingModel>ControlledByCampaign</sharingModel>
</CustomObject>